--- a/AboutUs.html
+++ b/AboutUs.html
@@ -2,18 +2,136 @@
 <html>
 <head>
 <title>About Us</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="normalize.css">
+
+<!--Bootstrap CSS-->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" 
+integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+</script>
 </head>
-<body>
-    <p class="about"><img class="picture" src="Images/truck.jpg" alt="picture" height="350px" width="350px">
-    Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-    when an unknown printer took a galley of type and scrambled it to make a type 
-    specimen book. It has survived not only five centuries, but also the leap into 
-    electronic typesetting, remaining essentially unchanged. It was popularised in 
-    the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-</body>
+<body class="about-body">
+    <header class="header" id="main-header">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <figure>
+                <img src="Images/logoJpg.jpg" class="logo" alt="logo" style="max-width: 100%;height: auto;">
+            </figure>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">   
+                    <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                    </li>                         
+                    <li class="nav-item">
+                    <a class="nav-link" href="AboutUs.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="Carousel.html">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">Partners</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="ContactUs.html">Contact</a>
+                    </li>                   
+                </ul>
+            </div>
+        </nav> <!--/Navigation-->
+        </header>
+        <div class="about-div">
+        <div class="about-row">
+            <div class="about-column">
+                <strong>HISTORY</strong><br>
+                <p class="history">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                when an unknown printer took a galley of type and scrambled it to make a type 
+                specimen book. It has survived not only five centuries, but also the leap into 
+                electronic typesetting, remaining essentially unchanged. It was popularised in 
+                the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                and more recently with desktop publishing software like Aldus PageMaker including 
+                versions of Lorem Ipsum.</p>
+                <strong>OUR LEADERSHIP</strong>
+                <p class="our-chief">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                when an unknown printer took a galley of type and scrambled it to make a type 
+                specimen book. It has survived not only five centuries, but also the leap into 
+                electronic typesetting, remaining essentially unchanged. It was popularised in 
+                the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                and more recently with desktop publishing software like Aldus PageMaker including 
+                versions of Lorem Ipsum.</p>
+            </div>
+            <div class="address-column">
+                <address>
+                    <strong>FIDA LLC</strong><br>
+                    1300 S 6th St.<br>
+                    Louiville, KY<br>
+                    40208<br>
+                    phone: 502-123-4567<br>
+                    fax: 502-123-4567<br>
+                    email: <a href="#">fidallc@fida.com</a><br>   
+                </address>
+            </div>
+        </div>
+        <div class="chief-row">
+            <div class="chief-column">
+                <div class="card">
+                    <img src="Images/ceo.jpg" alt="Sultan" style="width:50%">
+                    <div class="container">
+                    <h2>Sultan Sharipov</h2>
+                    <p class="title">CEO & Founder</p>
+                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>sultan@fida.com</p>
+                    <p><button class="button">Contact</button></p>
+                    </div>
+                </div>
+            </div>
+              
+            <div class="chief-column">
+                <div class="card">
+                    <img src="Images/ceo.jpg" alt="Islam" style="width:50%">
+                    <div class="container">
+                    <h2>Islambek Muhamedziev</h2>
+                    <p class="title">CEO & Founder</p>
+                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>islambek@fida.com</p>
+                    <p><button class="button">Contact</button></p>
+                    </div>
+                </div>
+            </div>  
+            <div class="team-row">
+                <div class="team-column">
+                <strong>OUR TEAM</strong><br>
+                <p class="team">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                when an unknown printer took a galley of type and scrambled it to make a type 
+                specimen book. It has survived not only five centuries, but also the leap into 
+                electronic typesetting, remaining essentially unchanged. It was popularised in 
+                the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                and more recently with desktop publishing software like Aldus PageMaker including 
+                versions of Lorem Ipsum.</p>
+                </div>             
+        </div>
+        </div><!--/about-div-->
+        <footer>     
+            <div class="follow_us">
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-twitter-square"></i></a>           
+            </div> 
+                
+            <div class="copyright"><small>&copy FIDA LLC. All rights reserved.</small>
+            </div>       
+        </footer> 
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>  
+    </body>
 </html>
 
 
