--- a/Carousel.html
+++ b/Carousel.html
@@ -1,39 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Gallery</title>
-</head>
+<title>Gallery</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="normalize.css">
+
+<!--Bootstrap CSS-->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" 
+integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+</script>
+</head>
 <body>
-<div class="container">
-    <div class="carousel slide" id="featured">
-        <ol class="carousel-indicators">
-            <li data-target="#featured" data-slide-to="0" class="active"></li>
-            <li data-target="#featured" data-slide-to="1"></li>
-            <li data-target="#featured" data-slide-to="2"></li>
-        </ol>
-    <div class="carousel-inner">
-    <div class="item active">
-        <img src="images/truck.jpg" alt="Truck One" height="500px" width="500px">
+    <header class="header" id="main-header">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <figure>
+                <img src="Images/logoJpg.jpg" class="logo" alt="logo" style="max-width: 100%;height: auto;">
+            </figure>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">  
+                <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+                </li>             
+                <li class="nav-item">
+                    <a class="nav-link" href="AboutUs.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Carousel.html">Gallery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Partners</a>
+                    </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="ContactUs.html">Contact</a>
+                </li>                   
+                </ul>
+            </div>
+        </nav> <!--/Navigation-->
+    </header>
+    <div class="container">
+        <div class="carousel slide" id="featured">
+            <ol class="carousel-indicators">
+                <li data-target="#featured" data-slide-to="0" class="active"></li>
+                <li data-target="#featured" data-slide-to="1"></li>
+                <li data-target="#featured" data-slide-to="2"></li>
+            </ol>
+        <div class="carousel-inner">
+        <div class="item active">
+            <img src="images/truck.jpg" alt="Truck One" height="500px" width="500px">
+        </div>
+        <div class="item">
+            <img src="images/truck2.jpg" alt="Truck Two" height="500px" width="500px">
+        </div>
+        <div class="item">
+            <img src="images/truck3.jpg" alt="Truck Three" height="500px" width="500px">
+        </div>        
+        </div> <!--/div-carousel-inner-->
+        <a class="left carousel-control" href="#featured" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a> 
+        <a class="right carousel-control" href="#featured" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a> 
+        </div> <!--div carousel-->
     </div>
-    <div class="item">
-        <img src="images/truck2.jpg" alt="Truck Two" height="500px" width="500px">
-    </div>
-    <div class="item">
-        <img src="images/truck3.jpg" alt="Truck Three" height="500px" width="500px">
-    </div>        
-    </div> <!--div-inner-->
-    <a class="left carousel-control" href="#featured" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-    </a> 
-    <a class="right carousel-control" href="#featured" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-    </a> 
-</div> <!--div carousel-->
-</div>
+    <footer>     
+        <div class="follow_us">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-twitter-square"></i></a>           
+        </div> 
+                
+        <div class="copyright"><small>&copy FIDA LLC. All rights reserved.</small>
+        </div>       
+    </footer> 
+        <!--Bootstrap-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script> 
 </body>
 </html>
