Overall website design edited and modified

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 </head>
 <body>    
-    <header class="header" id="main-header">
+    <header class="header sticky-top" id="main-header">
         <nav class="navbar navbar-expand-lg navbar-light">
             <figure>
-                <img src="Images/logoJpg.jpg" class="logo" alt="logo" style="max-width: 100%;height: auto;">
+                <img src="Images/logoJpg.jpg" class="logo" alt="logo" style="max-width: 30%;height: auto;">
             </figure>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -25,17 +25,17 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">  
                 <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link active" href="index.html">Home</a>
                 </li>             
                 <li class="nav-item">
                     <a class="nav-link" href="AboutUs.html">About</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Carousel.html">Gallery</a>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="#">Gallery</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Partners</a>
-                    </li>
+                    </li> -->
                 <li class="nav-item">
                     <a class="nav-link" href="ContactUs.html">Contact</a>
                 </li>                   
@@ -44,7 +44,7 @@
         </nav> <!--/Navigation-->
     </header>
     <!--Bootsrap-->
-        <div class="container-pt-4">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-sm">
                     <h3 class="mb-4">Owner Operators</h3>
