--- a/AboutUs.html
+++ b/AboutUs.html
@@ -14,39 +14,39 @@ integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9
 </script>
 </head>
 <body class="about-body">
-    <header class="header" id="main-header">
+    <header class="header sticky-top" id="main-header">
         <nav class="navbar navbar-expand-lg navbar-light">
             <figure>
-                <img src="Images/logoJpg.jpg" class="logo" alt="logo" style="max-width: 100%;height: auto;">
+                <img src="Images/logoJpg.jpg" class="logo" alt="logo" style="max-width: 30%;height: auto;">
             </figure>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">   
-                    <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                    </li>                         
-                    <li class="nav-item">
-                    <a class="nav-link" href="AboutUs.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="Carousel.html">Gallery</a>
-                    </li>
-                    <li class="nav-item">
+                <ul class="navbar-nav">  
+                <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+                </li>             
+                <li class="nav-item">
+                    <a class="nav-link active" href="AboutUs.html">About</a>
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="#">Gallery</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#">Partners</a>
-                    </li>
-                    <li class="nav-item">
+                    </li> -->
+                <li class="nav-item">
                     <a class="nav-link" href="ContactUs.html">Contact</a>
-                    </li>                   
+                </li>                   
                 </ul>
             </div>
         </nav> <!--/Navigation-->
-        </header>
-        <div class="about-div">
+    </header>
+        <div class="container-fluid">
         <div class="row">
             <div class="col-lg">
-                <h2>HISTORY</h2>
+                <h3 class="mb-4">HISTORY</h3>
                 <p class="history">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                 when an unknown printer took a galley of type and scrambled it to make a type 
@@ -55,7 +55,7 @@ integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9
                 the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
                 and more recently with desktop publishing software like Aldus PageMaker including 
                 versions of Lorem Ipsum.</p>
-                <h2>OUR LEADERSHIP</h2>
+                <h3 class="mb-4">OUR LEADERSHIP</h3>
                 <p class="our-chief">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                 when an unknown printer took a galley of type and scrambled it to make a type 
@@ -64,48 +64,40 @@ integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9
                 the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
                 and more recently with desktop publishing software like Aldus PageMaker including 
                 versions of Lorem Ipsum.</p>
-            </div>
-            <div class="address-column">
-                <address>
-                    <h4>FIDA LLC</h4>
-                    1300 S 6th St.<br>
-                    Louiville, KY<br>
-                    40208<br>
-                    phone: 502-123-4567<br>
-                    fax: 502-123-4567<br>
-                    email: <a href="#">fidallc@fida.com</a><br>   
-                </address>
-            </div>
+            </div>         
         </div>
-        <div class="row">
-            <div class="col-lg">
-                <div class="card">
-                    <img src="Images/Sultan.jpg" alt="Sultan" style="width:50%">
-                    <div class="container">
-                    <h2>Sultan Sharipov</h2>
-                    <p class="title">CEO & Founder</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>sultan@fida.com</p>
-                    <p><button class="button">Contact</button></p>
-                    </div>
-                </div>
-            </div>
-              
-            <div class="col-lg">
-                <div class="card">
-                    <img src="Images/ceo.jpg" alt="Islam" style="width:50%">
-                    <div class="container">
-                    <h2>Islambek Muhamedziev</h2>
-                    <p class="title">CEO & Founder</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>islambek@fida.com</p>
-                    <p><button class="button">Contact</button></p>
-                    </div>
-                </div>
-            </div>  
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-lg">
-                <h2>OUR TEAM</h2>
+                    <div class="card align-items-center">
+                        <img class="image" src="Images/Sultan.jpg" alt="Sultan" style="width:50%">
+                        <div class="container">
+                        <h2>Sultan Sharipov</h2>
+                        <p class="title">CEO & Founder</p>
+                        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                        <p>sultan@fida.com</p>
+                        <p><button class="button">Contact</button></p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-lg">
+                    <div class="card align-items-center">
+                        <img class="image" src="Images/Sultan.jpg" alt="Islam" style="width:50%">
+                        <div class="container">
+                        <h2>Islambek Muhamedziev</h2>
+                        <p class="title">CEO & Founder</p>
+                        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                        <p>islambek@fida.com</p>
+                        <p><button class="button">Contact</button></p>
+                        </div>
+                    </div>
+                </div> 
+            </div> 
+        </div> 
+            <div class="row">
+                <div class="col-lg">
+                <h3 class="mb-4">OUR TEAM</h3>
                 <p class="team">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                 when an unknown printer took a galley of type and scrambled it to make a type 
