--- a/ContactUs.html
+++ b/ContactUs.html
@@ -17,7 +17,7 @@
         <header class="header" id="main-header">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <figure>
-                    <img src="Images/logoJpg.jpg" class="logo" alt="logo" style="max-width: 100%;height: auto;">
+                    <img src="Images/logoJpg.jpg" class="logo" alt="logo" style="max-width: 30%;height: auto;">
                 </figure>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -30,19 +30,37 @@
                     <li class="nav-item">
                         <a class="nav-link" href="AboutUs.html">About</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Carousel.html">Gallery</a>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" href="#">Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Partners</a>
-                        </li>
+                        </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="ContactUs.html">Contact</a>
+                        <a class="nav-link active" href="ContactUs.html">Contact</a>
                     </li>                   
                     </ul>
                 </div>
             </nav> <!--/Navigation-->
         </header>
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+          <!-- Links -->
+          <h6 class="text-uppercase font-weight-bold">Contact</h6>
+          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+          <p>
+            <i class="fa fa-home mr-3"></i> New York, NY 10012, US</p>
+          <p>
+            <i class="fa fa-envelope mr-3"></i> info@example.com</p>
+          <p>
+            <i class="fa fa-phone mr-3"></i> + 01 234 567 88</p>
+          <p>
+            <i class="fa fa-print mr-3"></i> + 01 234 567 89</p>
+
+        </div>
+
+
+
         <div class="container-contact">
             <form id="contact-form" action="action_page.php">
               <div class="row-contact">
