--- a/index.html
+++ b/index.html
@@ -13,49 +13,51 @@
     integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
 </head>
-<body>    
-    <header class="header sticky-top" id="main-header">
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <figure>
-                <img src="Images/logoJpg.jpg" class="logo" alt="logo" style="max-width: 30%;height: auto;">
-            </figure>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">  
-                <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
-                </li>             
-                <li class="nav-item">
-                    <a class="nav-link" href="AboutUs.html">About</a>
-                </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="#">Gallery</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Partners</a>
-                    </li> -->
-                <li class="nav-item">
-                    <a class="nav-link" href="ContactUs.html">Contact</a>
-                </li>                   
-                </ul>
-            </div>
-        </nav> <!--/Navigation-->
-    </header>
+    <body>    
+        <header class="header sticky-top" id="main-header">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <figure>
+                    <a href="index.html"><img src="Images/logoJpg.jpg" class="logo" alt="logo" style="max-width: 30%;height: auto;"></a>
+                </figure>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">  
+                    <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Home</a>
+                    </li>             
+                    <li class="nav-item">
+                        <a class="nav-link" href="AboutUs.html">About</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" href="#">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Partners</a>
+                        </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="ContactUs.html">Contact</a>
+                    </li>                   
+                    </ul>
+                </div>
+            </nav> <!--/Navigation-->
+        </header>
     <!--Bootsrap-->
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm">
                     <h3 class="mb-4">Owner Operators</h3>
-                    <a href=""><img class="mb-4 img-fluid rounded" src="Images/apply.jpg" alt="owner_operator"></a>
+                    <a href=""><img class="mb-4 img-fluid rounded" src="Images/Truck-driver-standing-in-front-of-big-rigs1.jpg" alt="owner_operator"></a>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy  Ipsum is simply dummy text of the printing and. 
+                    </p>
                     <button type="button" class="my-button"><a href="#">Learn More</a></button>
                 </div>
                 <div class="col-sm">
                     <h3 class="mb-4">Drivers</h3>
-                    <a href=""><img class="mb-4 img-fluid rounded" src="Images/apply.jpg" alt="truck_driver"></a>
+                    <a href=""><img class="mb-4 img-fluid rounded" src="Images/truck_driver.jpg" alt="truck_driver"></a>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
                     <button type="button" class="my-button"><a href="#">Learn More</a></button>
@@ -74,13 +76,12 @@
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Apply Form</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    </div>
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Apply Form</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span></button>
+                        </div>
                     <!--Apply Form-->
                     <div class="modal-body">                     
                             <div class="form-group">
@@ -107,12 +108,12 @@
                     <div class="modal-footer">
                     <button type="button" id="submit" class="btn btn-primary" data-dismiss="modal">SUBMIT</button>
                     </div>
+                <!-- </div>
                 </div>
+            </div> -->
+                    </div>
                 </div>
             </div>
-            </div>
-        </div>
-        </div>
     <footer>     
         <div class="follow_us">
             <a href="#"><i class="fab fa-instagram"></i></a>
@@ -125,7 +126,6 @@
         </div>       
     </footer> 
     <!--Bootstrap-->
-    
     <script src="JavaScript/jquery-3.3.1"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
