removed action from form for now to prevent 404 error

--- a/ContactUs.html
+++ b/ContactUs.html
@@ -57,7 +57,7 @@
             <i class="fa fa-print mr-3"></i> + 01 502 123 4567</p>
         </div>
         <div class="container-contact">
-            <form id="contact-form" action="action_page.php">
+            <form id="contact-form">
               <div class="row-contact">
                 <div class="col-25">
                   <label for="firstname"><strong>First Name</strong></label>
