I have added png file

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -16,7 +16,7 @@ integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9
     <header class="header sticky-top" id="main-header">
         <nav class="navbar navbar-expand-lg navbar-light">
             <figure>
-                <a href="index.html"><img src="Images/logoJpg.jpg" class="logo" alt="logo" style="max-width: 30%;height: auto;"></a>
+                <a href="index.html"><img src="Images/logo.png" class="logo" alt="logo" style="max-width: 30%;height: auto;"></a>
             </figure>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
