--- a/Azimut/index.html
+++ b/Azimut/index.html
@@ -190,7 +190,7 @@
         <div class="container">
             <div class="row">
                 <form class="main_calc-inner">
-                    <h2>Рассчитать стоимость доставки</h2>
+                    <h2>Рассчитать стоимость доставки2</h2>
                     <div class="main_calc-wrap" id="calc_wrap">
                         <div class="main_calc-item">
                             <div class="main_calc-item-title">
